[project]
name = "app-capture"
version = "0.0.1"
authors = [
  { name="Tom Yanovich", email="tomyanovich@gmail.com" },
]
description = "Capture traffic from an android app and analyze it live with Wireshark"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Operating System :: POSIX :: Linux",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TomYanovich/app-capture"
Issues = "https://github.com/TomYanovich/app-capture/issues"